<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
            android:id="@+id/tutee_model_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/boy"
            android:contentDescription="@string/image_of_tutee"/>

    <TextView
            android:id="@+id/tutee_model_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/tutee_model_image"
            android:text="@string/COMS410"
            android:textSize="15sp" />

    <TextView
            android:id="@+id/tutee_model_from_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutee_model_prompt"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/tutee_model_image"
            android:text="SAMPLE TEXT"
            android:textStyle="bold"
            android:textSize="15sp" />
</RelativeLayout>