<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ListView
            android:id="@+id/tutee_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
    </ListView>
    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/tutee_progress"
            style="?android:attr/progressBarStyleLarge"
            android:visibility="invisible"/>
</RelativeLayout>